[package]
name = "rustcpp"
version = "1.72.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.4"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cc = { version = "1.0", features = ["parallel"] }
counted-array = "0.1.2"
lazy_static = "1.4.0"